tests/macros/multi_select/plugin.rs
fn main() {
    let q = requestty::questions![MultiSelect { plugin: todo!() }];
}
